# darknet-app

./: .gitignore  README.md  amd64.Dockerfile  amd64.base.Dockerfile  arm32v7.Dockerfile  arm64v8.Dockerfile  arm64v8.base.Dockerfile  build_base_on_devboard.sh  build_on_devboard.sh  cloudbuild.yaml  deployment.yaml  jetsonnano.Dockerfile  multi-arch-manifest.yaml
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: FindPahoMqttC.cmake  FindPahoMqttCPP.cmake
old/: amd64.Dockerfile  arm32v7.base.Dockerfile  arm64v8.base.Dockerfile
on_devboard_docker/: jetsonnano.Dockerfile
scripts/: nv-apply-debs.sh
src/: CMakeLists.txt  main.cpp
